# pytest_gxp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  justfile  mkdocs.yml  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: docs.yml
docs/: .gitkeep  DEPLOYMENT.md  contributing.md  index.md
docs/api/: evidence.md  generator.md  parser.md  reports.md  traceability.md
docs/examples/: csv-validation-report-example.md  design-spec.md  functional-spec.md  installation-spec.md  overview.md  traceability-example.md  user-spec.md
docs/examples/files/: csv_validation_report.json  traceability_matrix.csv  traceability_matrix.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/user-guide/: cli-tools.md  csv-report-format.md  reports.md  running-tests.md  specification-format.md  traceability-format.md
examples/: README.md  pytest.ini  test_example.py
examples/gxp_report_files/: README.md  csv_validation_report.csv  csv_validation_report.json  csv_validation_report.md  evidence_manifest.json  requirement_coverage.md  traceability_matrix.csv  traceability_matrix.json  traceability_matrix.md
examples/gxp_spec_files/: design_specification.md  functional_specification.md  installation_specification.md  user_specification.md
pytest_gxp/: __init__.py  config.py  evidence.py  generator.py  markdown_format.py  parser.py  plugin.py  report.py  traceability.py
pytest_gxp/cli/: __init__.py  req_coverage.py  test_stubs.py
tests/: README.md  __init__.py  conftest.py  test_evidence.py  test_generator.py  test_parser.py  test_plugin.py  test_report.py  test_traceability.py
